Gestao de acessos

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,1 +1,7 @@
 // Here you can add other styles
+.group-name {
+    position: absolute;
+    right: 75px;
+    font-size: 12px;
+    text-transform: capitalize;
+}
